[metadata]
name = package_template_districts
version = 0.0.1
author = VGLUG
author_email = vijisulochana14@gmail.com
description = A package template
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sulochanaviji/districts/src/package_template_districts
project_urls = https://github.com/sulochanaviji/districts/src/package_template_districts/
#Bug Tracker = https://github.com/sulochanaviji/districts/issues
classifiers =
    programming language :: Python :: 3
license = GPL v3
    operating system :: OS Independent


[options]
package_dir=
    =src
packages=find:
python_requires = >=3.8
install_requires =
   pandas

[options.packages.find]
where=src
include = pkg*

keywords: districts,district,pydistricts,pydistrict
platform: ALL




